# openais

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md
Config/: BuildVariant.py  Config.cmake  TaskManagerServer.py
Config/Logger/: ConsoleLogger.py  FileLogger.py  Logger.py
Interfaces/: CMakeLists.txt
Interfaces/InputNumberStringProviderInterface/: CMakeLists.txt  InputNumberStringProviderInterface.cpp  InputNumberStringProviderInterface.hpp
Interfaces/InputPersonPrinterInterface/: CMakeLists.txt  InputPersonPrinterInterface.cpp  InputPersonPrinterInterface.hpp
Interfaces/OutputConsoleLoggerInterface/: CMakeLists.txt  OutputConsoleLoggerInterface.cpp  OutputConsoleLoggerInterface.hpp
Interfaces/OutputLogger/: OutputLoggerInterface.cpp  OutputLoggerInterface.hpp
Interfaces/OutputLoggerInterface/: CMakeLists.txt
Interfaces/OutputPersonPrinterInterface/: CMakeLists.txt  OutputPersonPrinterInterface.cpp  OutputPersonPrinterInterface.hpp
Interfaces/OutputSampleInterface/: CMakeLists.txt  OutputSampleInterface.cpp  OutputSampleInterface.hpp
Interfaces/OutputSomethingInterface/: CMakeLists.txt  OutputSomethingInterface.cpp  OutputSomethingInterface.hpp
Libs/: CMakeLists.txt
Libs/SHMTaskComm/: CMakeLists.txt  SHMBlock.cpp  SHMBlock.hpp  SHMTaskCommClient.cpp  SHMTaskCommClient.hpp  SHMTaskCommPublisher.cpp  SHMTaskCommSubscriber.cpp
Libs/TMP/: CMakeLists.txt
Libs/TMP/Src/: TMP.hpp  TMPConnection.cpp  TMPConnection.hpp  TMPMessage.cpp  TMPMessage.hpp
Libs/TMP/Src/TMPMessages/: TMPPauseMessage.cpp  TMPPauseMessage.hpp  TMPRequestNameMessage.cpp  TMPRequestNameMessage.hpp  TMPRequestStatusMessage.cpp  TMPRequestStatusMessage.hpp  TMPResponseNameMessage.cpp  TMPResponseNameMessage.hpp  TMPResponseStatusMessage.cpp  TMPResponseStatusMessage.hpp  TMPResumeMessage.cpp  TMPResumeMessage.hpp  TMPStopMessage.cpp  TMPStopMessage.hpp
Loggers/: CMakeLists.txt
Loggers/ConsoleLogger/: CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.hpp
Loggers/FileLogger/: CMakeLists.txt  FileLogger.cpp  FileLogger.hpp
Scripts/: Common.sh  CreateComponent.sh  CreateInputInterface.sh  CreateOutputInterface.sh  CreatePeriodicTask.sh  CreateTask.sh  Heredoc.sh  Init.sh  InstallBoost.sh  InstallDoxygen.sh  InstallPython.sh
Scripts/Resources/: Doxyfile.in
Scripts/Resources/Component/: CMakeLists.txt.sh  Component.cpp.sh  Component.hpp.sh
Scripts/Resources/Interface/: CMakeLists.txt.Input.m4  CMakeLists.txt.Input.sh  CMakeLists.txt.Output.m4  CMakeLists.txt.Output.sh  InputInterface.cpp.m4  InputInterface.cpp.sh  InputInterface.hpp.m4  InputInterface.hpp.sh  OutputInterface.cpp.m4  OutputInterface.cpp.sh  OutputInterface.hpp.m4  OutputInterface.hpp.sh
Scripts/Resources/Task/: CMakeLists.txt.Components.sh  CMakeLists.txt.Test.m4  CMakeLists.txt.Test.sh  CMakeLists.txt.m4  CMakeLists.txt.sh  ContinualTaskConfig.json  ContinualTaskConfig.py  PeriodicTaskConfig.json  PeriodicTaskConfig.py  Task.cpp.m4  Task.cpp.sh  Task.hpp.m4  Task.hpp.sh  TaskTest.cpp.m4  TaskTest.cpp.sh  config.json  test.m4
Serialization/: CMakeLists.txt
Serialization/Person/: CMakeLists.txt  Person.pb.cc  Person.pb.h  Person.proto
Tasks/: CMakeLists.txt
Tasks/ExampleTask/: CMakeLists.txt  ExampleTask.cpp  ExampleTask.hpp  config.py
Tasks/ExampleTask/Test/: CMakeLists.txt  ExampleTaskTest.cpp
Tasks/HelloPrinterTask/: CMakeLists.txt  HelloPrinterTask.cpp  HelloPrinterTask.hpp  config.py
Tasks/HelloPrinterTask/Test/: CMakeLists.txt  HelloPrinterTaskTest.cpp
Tasks/SampleTask/: CMakeLists.txt  SampleTask.cpp  SampleTask.hpp  config.json
Tasks/SomeTask/: CMakeLists.txt  SomeTask.cpp  SomeTask.hpp
Tasks/SomeTask/Test/: CMakeLists.txt
docs/: Concepts.md  Geting_Started.md  Getting_Started.md  README.md  Tutorial.md  _sidebar.md  index.html
openais/: CMakeLists.txt  Python.cmake
openais/Interface/: CMakeLists.txt  InputInterface.hpp  Interface.cpp  Interface.hpp  InterfaceDB.cpp  InterfaceDB.hpp  OutputInterface.hpp
openais/Logger/: CMakeLists.txt  Log.cpp  Log.h  LogEntry.cpp  LogEntry.hpp  LogLevel.h  Logger.cpp  Logger.hpp
openais/Logger/Test/: CMakeLists.txt  LoggerTest.cpp
openais/Task/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  Component.cpp  Component.hpp  Config.cpp  Config.hpp  ContinualTask.cpp  ContinualTask.hpp  Interpreter.cpp  Interpreter.hpp  Main.cpp  PeriodicTask.cpp  PeriodicTask.hpp  Task.cpp  Task.hpp  TaskMain.cpp  TaskMain.hpp
openais/Task/TaskManager/TaskManagerClient/: TMPClient.cpp  TMPClient.hpp
openais/Task/TaskManager/TaskManagerServer/: Main.cpp  TMPServer.cpp  TMPServer.hpp
openais/Task/Test/: CMakeLists.txt  CommandLineTest.cpp  PeriodicTaskTest.cpp  TaskTest.cpp
openais/Time/: CMakeLists.txt  Time.cpp  Time.hpp
openais/Time/Test/: CMakeLists.txt  TimeTest.cpp
