file(GLOB LOGGERS LIST_DIRECTORIES true "*")
foreach(LOGGER ${LOGGERS})
    if(IS_DIRECTORY ${LOGGER}) 
        add_subdirectory(${LOGGER})
        get_filename_component(LOGGER_NAME ${LOGGER} NAME)
        list(APPEND LOGGER_LIBS ${LOGGER_NAME})
    endif()
endforeach(LOGGER ${LOGGERS})
set(LOGGER_LIBS ${LOGGER_LIBS} PARENT_SCOPE)
