add_library(InputPersonPrinterInterface STATIC InputPersonPrinterInterface.cpp)
target_include_directories(InputPersonPrinterInterface PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/openais ${CMAKE_SOURCE_DIR}/Serialization)
set_target_properties(InputPersonPrinterInterface PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
target_link_libraries(InputPersonPrinterInterface PRIVATE Person)
