include_directories("/usr/local/include/iceoryx/v2.90.0")
link_directories("/usr/local/lib") 
link_libraries(iceoryx_posh iceoryx_hoofs iceoryx_platform iceoryx_binding_c iceoryx_posh_config iceoryx_posh_gateway iceoryx_posh_roudi) 
add_executable ( SomeTask SomeTask.cpp )
set(INTERFACES InterfaceBase) 
target_link_libraries ( SomeTask PUBLIC   ${OPENAIS_TASK}  -Wl,--whole-archive   ${INTERFACES}    ${LOGGER_LIBS}  -Wl,--no-whole-archive)
target_include_directories (SomeTask PUBLIC   ${CMAKE_CURRENT_SOURCE_DIR} )
target_compile_definitions (SomeTask PUBLIC SOME_TASK_CONFIG_FILENAME=${CMAKE_BINARY_DIR}/Config/SomeTaskConfig.py)
set_target_properties (SomeTask PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/Bin/" )
configure_file (  ${CMAKE_CURRENT_SOURCE_DIR}/config.py  ${CMAKE_BINARY_DIR}/Config/SomeTaskConfig.py COPYONLY)
if(ENABLE_TESTING) 
add_subdirectory(Test) 
endif() 

